# rz-probana-zz

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  GLOSSARY.md  README.md  py_requirements.txt
.cargo/: config.toml
.github/workflows/: build.yml  reuse.yml
.reuse/: dep5
bda/: Cargo.toml  bindgen_blocklist.rs  build.rs  wrapper.h
bda/src/: abstr_int.rs  bda.rs  bda_binding.rs  cfg.rs  flow_graphs.rs  icfg.rs  lib.rs  path_sampler.rs  post_analysis.rs  pre_processor.rs  rz_binding.rs  state.rs  test_cfg.rs  test_flow_graphs.rs  test_graphs.rs  test_path_sampler.rs  test_post_analysis.rs  test_state.rs  test_unit.rs  test_weight.rs  weight.rs
bda/tests/: integration_tests.rs  regression_tests.rs
bda/tests/bins/: build.sh  icall_malloc.c  paper_dep_example.c  post_loop_offsets.c  post_pass_ref_across_proc.c  post_simple_two_deps.c
bda/tests/common/: mod.rs
bda/tests/test_bins/: build.sh  unmapped_fcn_in_loop.c
binding/: Cargo.toml  bindgen_blocklist.rs  build.rs  wrapper.h
binding/src/: lib.rs
helper/: Cargo.toml
helper/src/: constant.rs  expression.rs  lib.rs  matrix.rs  num.rs  progress.rs  rz.rs  set_map.rs  spinner.rs  timer.rs  user.rs  vec_map.rs
osprey/: Cargo.toml
probana/: Cargo.toml
probana-zz/: Cargo.toml
probana-zz/src/: lib.rs  probana_binding.rs  rz_binding.rs
probana/src/: lib.rs  rz_binding.rs
rzil_abstr/: Cargo.toml  build.rs
rzil_abstr/c_src/tests/: .gitignore  stack_int.c  stack_multiple.c  stack_no_param.c  stack_ptr.c
rzil_abstr/src/: bitvector.rs  interpreter.rs  lib.rs  op_handler.rs  test_interpreter.rs
rzil_abstr/test_bins/: build.sh  icall.c  stack_mem_arg.c
rzil_abstr/tests/bins/: malloc.c
rzil_abstr/tests/test_bins/: build.sh
stochfuzz/: Cargo.toml
test_bins/: all.c  build.sh
