# SPDX-FileCopyrightText: 2023 Rot127 <unisono@quyllur.org>
# SPDX-License-Identifier: LGPL-3.0-only

[workspace]

members = [
  "probana-zz",
  "binding",
  "bda",
  "osprey",
  "rzil_abstr",
  "stochfuzz",
  "helper"
]

resolver = "2"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
