# SPDX-FileCopyrightText: 2023 Rot127 <unisono@quyllur.org>
# SPDX-License-Identifier: LGPL-3.0-only

[package]
name = "bda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
petgraph = { version = "0.6.4", default-features = false, features = ["graphmap"] }
rand = "0.8.5"
binding = { path = "../binding", version = "0.1.0" }

[lib]
crate-type = ["rlib", "cdylib"]
