# SPDX-FileCopyrightText: 2023 Rot127 <unisono@quyllur.org>
# SPDX-License-Identifier: LGPL-3.0-only

[package]
name = "bda"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33.2"
cty = "0.2.2"
petgraph = { version = "0.6.4", default-features = false, features = ["graphmap"] }
rand = "0.8.5"
binding = { path = "../binding", version = "0.1.0" }
rzil_abstr = { path = "../rzil_abstr", version = "0.1.0" }
helper = { path = "../helper", version = "0.1.0" }
rug = "1.24"
bitflags = "2.6.0"
flexi_logger = { version = "0.29", features = ["async", "specfile", "compress"] }
log = "0.4"
regex = "1.11"

[lib]
crate-type = ["rlib", "cdylib"]
