# SPDX-FileCopyrightText: 2024 Rot127 <unisono@quyllur.org>
# SPDX-License-Identifier: LGPL-3.0-only

[package]
name = "binding"
version = "0.1.0"
edition = "2021"

[dependencies]
cty = "0.2.2"
rug = "1.24.1"
helper = { path = "../helper", version = "0.1.0" }

[build-dependencies]
bindgen = "0.69.1"

[lib]
crate-type = ["rlib", "cdylib"]
