# SPDX-FileCopyrightText: 2023 Rot127 <unisono@quyllur.org>
# SPDX-License-Identifier: LGPL-3.0-only

[package]
name = "osprey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bda = { path = "../bda" }
probana = { path = "../probana" }

[lib]
crate-type = ["rlib", "cdylib"]
