# SPDX-FileCopyrightText: 2024 Rot127 <unisono@quyllur.org>
# SPDX-License-Identifier: LGPL-3.0-only

[package]
name = "probana-zz"
version = "0.1.0"
edition = "2021"

[dependencies]
binding = { path = "../binding", version = "0.1.0" }
bda = { path = "../bda", version = "0.1.0" }
osprey = { path = "../osprey", version = "0.1.0" }

[lib]
crate-type = ["rlib", "cdylib"]
