# SPDX-FileCopyrightText: 2024 Rot127 <unisono@quyllur.org>
# SPDX-License-Identifier: LGPL-3.0-only

[package]
name = "probana_zz"
version = "0.1.0"
edition = "2021"

[dependencies]
cty = "0.2.2"
binding = { path = "../binding", version = "0.1.0" }
helper = { path = "../helper", version = "0.1.0" }
bda = { path = "../bda", version = "0.1.0" }
osprey = { path = "../osprey", version = "0.1.0" }
regex = "1.10.4"

[lib]
crate-type = ["rlib", "cdylib"]
