# SPDX-FileCopyrightText: 2024 Rot127 <unisono@quyllur.org>
# SPDX-License-Identifier: LGPL-3.0-only

[package]
name = "rzil_abstr"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binding = { path = "../binding", version = "0.1.0" }
helper = { path = "../helper", version = "0.1.0" }
rand = "0.8.5"
rand_distr = "0.4.3"
bitflags = "2.6.0"
log = "0.4"
